--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "9.3.0",
     "@hookform/resolvers": "3.9.1",
     "@radix-ui/react-accordion": "1.2.1",
     "@radix-ui/react-alert-dialog": "1.1.2",
@@ -42,7 +43,9 @@
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "3.6.0",
+    "dedent": "1.5.3",
     "embla-carousel-react": "8.5.1",
+    "faker": "6.6.6",
     "input-otp": "1.4.1",
     "lucide-react": "0.468.0",
     "next": "15.1.0",
