feat: enhance search results handling
- Accumulate search results instead of replacing them
- Update last result set for filter clicks instead of adding new ones
- Fix duplicate message keys in search results
- Add date validation check in date picker

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "date-fns": "3.6.0",
     "dedent": "1.5.3",
     "embla-carousel-react": "8.5.1",
-    "faker": "6.6.6",
+    "faker": "^5.5.3",
     "input-otp": "1.4.1",
     "lucide-react": "0.468.0",
     "next": "15.1.0",
