--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.4",
     "@tanstack/react-query": "^5.28.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
@@ -60,6 +61,7 @@
     "sonner": "1.7.1",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
+    "tsx": "^4.19.2",
     "vaul": "1.1.1",
     "zod": "3.24.1"
   },
